Add sitemap link to menu

--- a/src/includes/partials/footer.njk
+++ b/src/includes/partials/footer.njk
@@ -94,10 +94,10 @@
         <div class="d-flex gap-2 align-items-center py-4">
           <p class="my-0 small color-light-2 d-none d-md-block">Pobierz aplikacje mobilną</p>
           <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" title="Pobierz z Google Play" class="button-app btn-footer magnetic">
-            <img src="/assets/img/hero/googleplay.png" alt="">
+            <img src="/assets/img/hero/googleplay.png" alt="Taxi Prażmów - Pobierz z Google Play">
           </a>
           <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" title="Pobierz z Appstore" class="button-app btn-footer magnetic">
-            <img src="/assets/img/hero/appstore.png" alt="">
+            <img src="/assets/img/hero/appstore.png" alt="Taxi Prażmów - Pobierz z Appstore">
           </a>
         </div>
       </div>
