--- a/src/includes/sections/hero.njk
+++ b/src/includes/sections/hero.njk
@@ -41,15 +41,15 @@
 </div>
 </a>
         <a href="https://play.google.com/store/apps/details?id=com.taxity.bluutaxi" data-strength="40" title="Pobierz z Google Play" class="button-app magnetic fade-in">
-            <img src="/assets/img/hero/googleplay.png" alt="">
+            <img src="/assets/img/hero/googleplay.png" alt="Taxi Prażmów - Pobierz z Google Play">
         </a>
         <a href="https://apps.apple.com/pl/app/bluu-taxi-piaseczno-pra%C5%BCm%C3%B3w/id6504847568?platform=iphone" data-strength="60" title="Pobierz z Appstore" class="button-app magnetic fade-in">
-            <img src="/assets/img/hero/appstore.png" alt="">
+            <img src="/assets/img/hero/appstore.png" alt="Taxi Prażmów - Pobierz z Appstore">
         </a>
       </div>
     </div>
     <div class="offset-md-1 col-md-3 d-none d-md-block">
-      <img src="/assets/img/hero/app.png" alt="">
+      <img src="/assets/img/hero/app.png" alt="Taxi Prażmów - Aplikacja mobilna">
     </div>
     </div>
   </div>
